--- a/streams/client/index.html
+++ b/streams/client/index.html
@@ -30,7 +30,7 @@
 				id="form-slow"
 			>
 				<input type="file" name="file" />
-				<button type="submit">Upload and Compress</button>
+				<button type="submit">Upload</button>
 			</form>
 		</section>
 		<section>
